--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-  color: var(--)
+  padding-bottom: 40px;
 }
 
 .head {
